--- a/app/globals.scss
+++ b/app/globals.scss
@@ -14,6 +14,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
@@ -22,6 +23,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url("../public/transport-background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+main {
+  text-align: center;
+  margin: 5rem auto;
+  padding: 1.5rem 2rem;
 }
 
 * {
@@ -30,9 +42,32 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-size: 3rem;
+  margin: 3rem auto;
+}
+
+h2 {
+  font-size: 1.75rem;
+}
+
+p {
+  font-size: 1.5rem;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  padding: 0.75rem 3rem;
+  border-radius: 1rem;
+  background-color: rgb(230, 229, 229);
+  color: rgb(11, 11, 11);
+  display: block;
+  margin: 0.5rem 0;
+  cursor: pointer;
 }
 
 @media (prefers-color-scheme: dark) {
