--- a/app/globals.scss
+++ b/app/globals.scss
@@ -32,7 +32,7 @@ body {
 
 main {
   text-align: center;
-  margin: 5rem auto;
+  margin: 0 auto;
   padding: 1.5rem 2rem;
 }
 
@@ -44,7 +44,7 @@ main {
 
 h1 {
   font-size: 3rem;
-  margin: 3rem auto;
+  margin: 0 auto;
 }
 
 h2 {
